k8s/network/repeater/istio.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: repeater
spec:
  hosts:
  - repeater.cluster.prageethw.co
  - repeater
  gateways:
  - repeater
  http:
  - route:
    - destination:
        host: repeater
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: repeater
spec:
  host: repeater
  subsets:
  - name: primary
    labels:
      release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: repeater
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-go-demo-8
      protocol: HTTP
    hosts:
    - repeater.cluster.prageethw.co
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-go-demo-8
      protocol: HTTP #need to set this as http to enable elb ssl offloading.   
    hosts:
    - repeater.cluster.prageethw.co
